Enable Preview features for JDK 15